Nova página home | index
Nova página home | index, estilos gadrient e reset.css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | CEGS Studio</title>
+    <link rel="stylesheet"  href="style.css">
+    <link rel="stylesheet"  href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@900&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <header class="cabecalho container">
-        
+    <header class="cabecalho_container">
+        <h1 class="tittle">CEGS Studio</h1>
     </header>
-    <main>
-
+    <main class="main_container">
+        <p id="apresentacao">O CEGS studio é uma empresa que presta serviços de design no mundo todo. Desde 2022 tem como objetivo deixar o mundo mais divertido e mais estiloso. </p>
     </main>
     <footer>
 
