--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <main class="main_container">
         <p id="apresentacao">O CEGS studio é uma empresa que presta serviços de design no mundo todo. Desde 2022 tem como objetivo deixar o mundo mais divertido e mais estiloso. </p>
     </main>
-    <footer>
-
+    <footer class="footer_container">
+        <p>Todos os direitos reservados</p>
+        <p>Developed by CEGS<p>
     </footer>
 </body>
 </html>
