--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 </head>
 <body>
     <header class="cabecalho_container">
+        <button>Menu</button>
+        <button>Sobre</button>
+        <button>Portfólio</button>
+        <button>Contato</button>
         <h1 class="tittle">CEGS Studio</h1>
     </header>
     <main class="main_container">
         <p id="apresentacao">O CEGS studio é uma empresa que presta serviços de design no mundo todo. Desde 2022 tem como objetivo deixar o mundo mais divertido e mais estiloso. </p>
     </main>
-    <footer class="footer_container">
-        <p>Todos os direitos reservados</p>
-        <p>Developed by CEGS<p>
+    <footer>
+
     </footer>
 </body>
 </html>
+</button>
