--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="tittle">CEGS Studio</h1>
     </header>
     <main class="main_container">
-        <p id="apresentacao">O CEGS studio é uma empresa que presta serviços de design no mundo todo. Desde 2022 tem como objetivo deixar o mundo mais divertido e mais estiloso. </p>
+        <p id="apresentacao">O CEGS studio é um site de experiência de usuário. </p>
     </main>
     <footer>
 
