--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button>Sobre</button>
         <button>Portfólio</button>
         <button>Contato</button>
+        <button>Mais</button>
         <h1 class="tittle">CEGS Studio</h1>
     </header>
     <main class="main_container">
