--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="tittle">CEGS Studio</h1>
     </header>
     <main class="main_container">
-        <p id="apresentacao">O CEGS studio é um site de experiência de usuário. </p>
+        <p id="apresentacao">O CEGS studio é uma empresa de experiência de usuário. </p>
     </main>
     <footer>
 
